--- a/source/_assets/css/main.css
+++ b/source/_assets/css/main.css
@@ -1,3 +1,18 @@
 @import 'tailwindcss/base';
 @import 'tailwindcss/components';
 @import 'tailwindcss/utilities';
+@import url('https://fonts.googleapis.com/css2?family=Kanit:wght@100;200;300;400;500;600;700;800;900&display=swap');
+body {
+    font-family: 'Kanit', sans-serif;
+}
+
+h1, h2, h3 , a {
+   
+    font-family: 'Kanit', sans-serif;
+}
+
+p {
+   
+    font-family: 'Kanit', sans-serif;
+}
+
